--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   geolocator: ^13.0.2
+  http: ^1.2.2
+  permission_handler: ^11.3.1
   flutter:
     sdk: flutter
+  geocoding: ^3.0.0
+  fluttertoast: ^8.2.8
+  flutter_spinkit: ^5.2.1
 
 
 
