--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   geocoding: ^3.0.0
   fluttertoast: ^8.2.8
   flutter_spinkit: ^5.2.1
+  intl: ^0.18.0
+  font_awesome_flutter: ^10.4.0
+  flutter_svg: ^2.0.0
 
 
 
@@ -68,7 +71,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -94,6 +99,6 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+#
+# For details regarding fonts from package dependencies,
+# see https://flutter.dev/to/font-from-package
